--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         body { font-family: sans-serif; margin: 20px; }
         #post-form { margin-top: 20px; padding: 15px; background: #f0f0f0; border-radius: 8px; }
         textarea { width: 100%; height: 60px; margin-bottom: 10px; }
-        .emergency { color: red; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -22,10 +21,11 @@
         <button type="submit" style="padding: 10px 20px; background: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">投稿する</button>
     </form>
     
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
     <script>
-        // 2. Firebaseの設定
+        // Firebaseの設定
         const firebaseConfig = {
             apiKey: "AIzaSyBMOr6Kag-PCGL6piRVtjCDukk01aurb1M",
             authDomain: "joso-13c95.firebaseapp.com",
@@ -34,31 +34,35 @@
             messagingSenderId: "659788884587",
             appId: "1:659788884587:web:39b9a1b840039c24875f2e"
         };
-        firebase.initializeApp(firebaseConfig);
+        
+        // ★修正2: Firebaseの初期化チェック
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+        }
         const db = firebase.firestore();
 
         let map;
         let markers = [];
 
-        // 3. 地図を出す命令（Google Mapsが読み込まれたら自動で動く）
+        // 地図を出す命令
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 14,
-                center: { lat: 35.9897, lng: 139.9791 } // 常総市付近
+                center: { lat: 35.9897, lng: 139.9791 }
             });
-            // ここで読み込み関数を呼び出す
             loadPosts(); 
         }
 
-        // 4. 投稿を読み込んで表示する命令（ここが重要！）
+        // 読み込み関数
         function loadPosts() {
-            // 古いマーカーを消す
             markers.forEach(m => m.setMap(null));
             markers = [];
 
             db.collection('posts').orderBy('timestamp', 'desc').limit(20).get().then((snapshot) => {
                 snapshot.forEach((doc) => {
                     const data = doc.data();
+                    if(!data.lat || !data.lng) return;
+
                     const marker = new google.maps.Marker({
                         position: { lat: data.lat, lng: data.lng },
                         map: map,
@@ -69,17 +73,13 @@
                         content: `<div style="color:black; padding:5px;">${data.text}</div>`
                     });
 
-                    marker.addListener('click', () => {
-                        infoWindow.open(map, marker);
-                    });
+                    marker.addListener('click', () => infoWindow.open(map, marker));
                     markers.push(marker);
                 });
-            }).catch(err => {
-                console.error("読み込みエラー:", err);
-            });
+            }).catch(err => console.error("読み込みエラー:", err));
         }
 
-        // 5. 投稿ボタンを押した時の動き
+        // 投稿ボタン
         document.getElementById('post-form').addEventListener('submit', (e) => {
             e.preventDefault();
             const text = document.getElementById('post-text').value;
@@ -94,13 +94,13 @@
                 }).then(() => {
                     document.getElementById('post-text').value = '';
                     alert("投稿しました！");
-                    loadPosts(); // 再読み込み
+                    loadPosts();
                 });
             }, () => alert("位置情報を許可してください"));
         });
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hvh-OUCTVM62geqN543IMtgEWl-eeTQ&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hvh-OUCTVM62geqN543IMtgEWl-eeTQ&callback=initMap"></script>
 
 </body>
 </html>
